Refactors code to use `toList()`
Replaces `collect(Collectors.toList())` with `toList()`
for improved code conciseness and readability when
collecting stream elements into a list.